force-app/main/default/objects/Allocation__c/Allocation__c.object-meta.xml
<CustomObject>
    <description>Effective-dated committed resource capacity created only from accepted staffing requests.</description>
    <label>Allocation</label>
    <nameField>
        <displayFormat>AL-{00000}</displayFormat>
        <label>Allocation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>