force-app/main/default/objects/Allocation__c/fields/Allocation_Percent__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Percent__c</fullName>
    <formula>IF(Resource__r.Daily_Capacity_Hours__c = 0, 0, Daily_Hours__c / Resource__r.Daily_Capacity_Hours__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allocation Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>