force-app/main/default/objects/Allocation__c/fields/Billable__c.field-meta.xml
<CustomField>
    <fullName>Billable__c</fullName>
    <formula>Billable_Snapshot__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>