force-app/main/default/objects/Allocation__c/fields/Billable_Snapshot__c.field-meta.xml
<CustomField><fullName>Billable_Snapshot__c</fullName><defaultValue>false</defaultValue><label>Billable Snapshot</label><trackHistory>true</trackHistory><type>Checkbox</type></CustomField>