force-app/main/default/objects/Allocation__c/fields/Billing_Rate_Snapshot__c.field-meta.xml
<CustomField><fullName>Billing_Rate_Snapshot__c</fullName><description>Governed billing rate frozen when the allocation version is published.</description><label>Billing Rate Snapshot</label><precision>18</precision><scale>2</scale><trackHistory>false</trackHistory><type>Currency</type></CustomField>