force-app/main/default/objects/Allocation__c/fields/Capacity_Policy_Version__c.field-meta.xml
<CustomField><fullName>Capacity_Policy_Version__c</fullName><label>Capacity Policy Version</label><length>80</length><type>Text</type></CustomField>