force-app/main/default/objects/Allocation__c/fields/Capacity_Status__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Status__c</fullName><label>Capacity Status at Publication</label><type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Underallocated</fullName><default>true</default><label>Underallocated</label></value>
        <value><fullName>Fully Allocated</fullName><default>false</default><label>Fully Allocated</label></value>
        <value><fullName>Overallocated</fullName><default>false</default><label>Overallocated</label></value>
    </valueSetDefinition></valueSet>
</CustomField>