force-app/main/default/objects/Allocation__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
                <default>true</default>
                <label>Billing</label>
            </value>
            <value>
                <fullName>Contractual Shadow</fullName>
            </value>
            <value>
                <fullName>WAR</fullName>
            </value>
            <value>
                <fullName>IFB/PO Awaited</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Value Consulting/Pre-sales</fullName>
            </value>
            <value>
                <fullName>Shadow Trainee</fullName>
            </value>
            <value>
                <fullName>Shadow Lateral</fullName>
            </value>
            <value>
                <fullName>Leadership/PMO</fullName>
            </value>
            <value>
                <fullName>Testing COE</fullName>
            </value>
            <value>
                <fullName>DLP COE</fullName>
            </value>
            <value>
                <fullName>Regression</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Investment/COE</fullName>
            </value>
            <value>
                <fullName>AFB</fullName>
            </value>
            <value>
                <fullName>NAFB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>