force-app/main/default/objects/Allocation__c/fields/Concurrent_Project_Count__c.field-meta.xml
<CustomField><fullName>Concurrent_Project_Count__c</fullName><description>Concurrent accepted project count in the effective period.</description><label>Concurrent Project Count</label><precision>3</precision><scale>0</scale><trackHistory>false</trackHistory><type>Number</type></CustomField>