force-app/main/default/objects/Allocation__c/fields/Context_Switch_Count__c.field-meta.xml
<CustomField><fullName>Context_Switch_Count__c</fullName><description>Estimated weekly project context switches created by the plan.</description><label>Context Switch Count</label><precision>3</precision><scale>0</scale><trackHistory>false</trackHistory><type>Number</type></CustomField>