force-app/main/default/objects/Allocation__c/fields/Cost_Rate_Snapshot__c.field-meta.xml
<CustomField><fullName>Cost_Rate_Snapshot__c</fullName><description>Governed cost rate frozen when the allocation version is published.</description><label>Cost Rate Snapshot</label><precision>18</precision><scale>2</scale><trackHistory>false</trackHistory><type>Currency</type></CustomField>