force-app/main/default/objects/Allocation__c/fields/Delivery_Membership__c.field-meta.xml
<CustomField><fullName>Delivery_Membership__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Delivery Membership</label><referenceTo>R360_Delivery_Membership__c</referenceTo><relationshipLabel>Allocations</relationshipLabel><relationshipName>Allocations</relationshipName><type>Lookup</type></CustomField>