force-app/main/default/objects/Allocation__c/fields/Expected_Roll_Off_Date__c.field-meta.xml
<CustomField><fullName>Expected_Roll_Off_Date__c</fullName><description>Forecast release date for this allocation segment.</description><label>Expected Roll-Off Date</label><trackHistory>false</trackHistory><type>Date</type></CustomField>