force-app/main/default/objects/Allocation__c/fields/Originating_Request__c.field-meta.xml
<CustomField>
    <fullName>Originating_Request__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Originating Request</label>
    <referenceTo>Staffing_Request__c</referenceTo>
    <relationshipLabel>Allocations</relationshipLabel>
    <relationshipName>Allocations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>