force-app/main/default/objects/Allocation__c/fields/Overallocated__c.field-meta.xml
<CustomField><fullName>Overallocated__c</fullName><defaultValue>false</defaultValue><label>Overallocated</label><type>Checkbox</type></CustomField>