force-app/main/default/objects/Allocation__c/fields/Overallocation_Approved_At__c.field-meta.xml
<CustomField><fullName>Overallocation_Approved_At__c</fullName><label>Over-allocation Approved At</label><required>false</required><type>DateTime</type></CustomField>