force-app/main/default/objects/Allocation__c/fields/Overallocation_Approved_By__c.field-meta.xml
<CustomField><fullName>Overallocation_Approved_By__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Over-allocation Approved By</label><referenceTo>User</referenceTo><relationshipName>Approved_Overallocation_Allocations</relationshipName><required>false</required><type>Lookup</type></CustomField>