force-app/main/default/objects/Allocation__c/fields/Overallocation_Expiry_Date__c.field-meta.xml
<CustomField><fullName>Overallocation_Expiry_Date__c</fullName><label>Over-allocation Expiry Date</label><required>false</required><type>Date</type></CustomField>