force-app/main/default/objects/Allocation__c/fields/Overallocation_Reason__c.field-meta.xml
<CustomField><fullName>Overallocation_Reason__c</fullName><label>Over-allocation Reason</label><length>1000</length><type>LongTextArea</type><visibleLines>4</visibleLines></CustomField>