force-app/main/default/objects/Allocation__c/fields/Overallocation_Status__c.field-meta.xml
<CustomField>
    <fullName>Overallocation_Status__c</fullName><label>Over-allocation Status</label><type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Not Required</fullName><default>true</default><label>Not Required</label></value>
        <value><fullName>Pending Approval</fullName><default>false</default><label>Pending Approval</label></value>
        <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
        <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
        <value><fullName>Expired</fullName><default>false</default><label>Expired</label></value>
    </valueSetDefinition></valueSet>
</CustomField>