force-app/main/default/objects/Allocation__c/fields/Parent_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Parent_Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Allocation</label>
    <referenceTo>Allocation__c</referenceTo>
    <relationshipLabel>Allocation Versions</relationshipLabel>
    <relationshipName>Allocation_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>