force-app/main/default/objects/Allocation__c/fields/Planning_Status__c.field-meta.xml
<CustomField>
    <fullName>Planning_Status__c</fullName><label>Planning Status</label><type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Draft</fullName><default>false</default><label>Draft</label></value>
        <value><fullName>Pending Approval</fullName><default>false</default><label>Pending Approval</label></value>
        <value><fullName>Published</fullName><default>true</default><label>Published</label></value>
        <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
        <value><fullName>Expired</fullName><default>false</default><label>Expired</label></value>
    </valueSetDefinition></valueSet>
</CustomField>