force-app/main/default/objects/Allocation__c/fields/Projected_Daily_Hours__c.field-meta.xml
<CustomField><fullName>Projected_Daily_Hours__c</fullName><label>Projected Aggregate Daily Hours</label><precision>5</precision><required>false</required><scale>2</scale><type>Number</type></CustomField>