force-app/main/default/objects/Allocation__c/fields/Published_At__c.field-meta.xml
<CustomField><fullName>Published_At__c</fullName><label>Published At</label><required>false</required><type>DateTime</type></CustomField>