force-app/main/default/objects/Allocation__c/fields/Published_By__c.field-meta.xml
<CustomField><fullName>Published_By__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Published By</label><referenceTo>User</referenceTo><relationshipName>Published_Resource360_Allocations</relationshipName><required>false</required><type>Lookup</type></CustomField>