force-app/main/default/objects/Allocation__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Version</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>