force-app/main/default/objects/Allocation__c/fields/Work_Unit__c.field-meta.xml
<CustomField><fullName>Work_Unit__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Work Unit</label><referenceTo>Work_Unit__c</referenceTo><relationshipLabel>Allocations</relationshipLabel><relationshipName>Allocations</relationshipName><type>Lookup</type></CustomField>