force-app/main/default/objects/Allocation__c/validationRules/Allocation_Line_Maximum.validationRule-meta.xml
<ValidationRule><fullName>Allocation_Line_Maximum</fullName><active>true</active><errorConditionFormula>OR(Daily_Hours__c &lt;= 0, Daily_Hours__c &gt; 8)</errorConditionFormula><errorMessage>One project-allocation line must be greater than zero and cannot exceed 8 hours per day.</errorMessage></ValidationRule>