force-app/main/default/objects/Allocation__c/validationRules/Allocation_Membership_Consistent.validationRule-meta.xml
<ValidationRule><fullName>Allocation_Membership_Consistent</fullName><active>true</active><errorConditionFormula>AND(NOT(ISBLANK(Delivery_Membership__c)), OR(Delivery_Membership__r.Resource__c &lt;&gt; Resource__c, Delivery_Membership__r.Portfolio__c &lt;&gt; Engagement__r.Portfolio__c))</errorConditionFormula><errorMessage>Allocation resource and project portfolio must match the selected delivery membership.</errorMessage></ValidationRule>