force-app/main/default/objects/Allocation__c/validationRules/Unbilled_Allocation_Control.validationRule-meta.xml
<ValidationRule>
    <fullName>Unbilled_Allocation_Control</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISPICKVAL(Classification__c, &quot;Billing&quot;)), OR(ISBLANK(Responsible_Owner__c), ISBLANK(Review_Date__c), ISBLANK(Control_Reason__c)))</errorConditionFormula>
    <errorMessage>Unbilled and internal allocations require an accountable owner, review date and control reason.</errorMessage>
</ValidationRule>