force-app/main/default/objects/Allocation__c/listViews/Current_Project_Allocations.listView-meta.xml
<ListView><fullName>Current_Project_Allocations</fullName><columns>NAME</columns><columns>Engagement__c</columns><columns>Work_Unit__c</columns><columns>Resource__c</columns><columns>Role__c</columns><columns>Daily_Hours__c</columns><columns>Start_Date__c</columns><columns>End_Date__c</columns><filterScope>Everything</filterScope><filters><field>Current__c</field><operation>equals</operation><value>1</value></filters><label>Current Project Allocations</label></ListView>